--- a/SlotMachine/Base.lproj/Main.storyboard
+++ b/SlotMachine/Base.lproj/Main.storyboard
@@ -570,7 +570,7 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="Raj-dy-NQa"/>
+        <segue reference="V4F-SF-j2Q"/>
         <segue reference="mHL-QN-ln8"/>
     </inferredMetricsTieBreakers>
     <resources>
